Create endpoint report sales/transactions
